Finalizing mime-types 2.4 release.

--- a/Contributing.rdoc
+++ b/Contributing.rdoc
@@ -108,3 +108,4 @@ Thanks to everyone else who has contributed to mime-types:
 * cgat
 * Greg Brockman
 * Łukasz Śliwa (for the friendly names)
+* Keerthi Siva
