--- a/History-Types.rdoc
+++ b/History-Types.rdoc
@@ -1,35 +1,42 @@
 = MIME Types Changes by Version
 
-== 2.5 / 2015-04-24
+== 2.5 / 2015-04-25
 
 * Updated the IANA media registry entries as of release date:
   * Added MIME types: application/A2L, application/AML, application/ATFX,
-    application/ATXML, application/CDFX+XML, application/CEA, application/DII, 
-    application/DIT, application/jose, application/jose+json,
-    application/json-seq, application/jwk+json, application/jwk-set+json,
-    application/jwt, application/LXF, application/MF4, application/rdap+json,
+    application/ATXML, application/CDFX\+XML, application/CEA, application/DII,
+    application/DIT, application/jose, application/jose\+json,
+    application/json-seq, application/jwk\+json, application/jwk-set\+json,
+    application/jwt, application/LXF, application/MF4, application/rdap\+json,
     application/vnd.apache.thrift.compact, vnd.apache.thrift.json,
-    application/vnd.citationstyles.style+xml, application/vnd.coffeescript,
+    application/vnd.citationstyles.style\+xml, application/vnd.coffeescript,
     application/vnd.enphase.envoy, application/vnd.fastcopy-disk-image,
-    application/vnd.gerber, application/vnd.gov.sk.e-form+xml,
-    application/vnd.gov.sk.e-form+zip,
-    application/vnd.gov.sk.xmldatacontainer+xml, application/vnd.ims.imsccv1p1,
-    application/vnd.ims.imsccv1p2, application/vnd.ims.imsccv1p3,
-    application/vnd.micro+json, application/vnd.microsoft.portable-executable,
-    application/vnd.msa-disk-image, application/vnd.oracle.resource+json,
-    application/vnd.tmd.mediaflex.api+xml, audio/opus, image/vnd.zbrush.pcx,
+    application/vnd.gerber, application/vnd.gov.sk.e-form\+xml,
+    application/vnd.gov.sk.e-form\+zip,
+    application/vnd.gov.sk.xmldatacontainer\+xml,
+    application/vnd.ims.imsccv1p1, application/vnd.ims.imsccv1p2,
+    application/vnd.ims.imsccv1p3, application/vnd.micro\+json,
+    application/vnd.microsoft.portable-executable,
+    application/vnd.msa-disk-image, application/vnd.oracle.resource\+json,
+    application/vnd.tmd.mediaflex.api\+xml, audio/opus, image/vnd.zbrush.pcx,
     text/csv-schema, text/markdown (marked as TEMPORARY).
-  * Updated metadata for application/coap-group+json (RFC7390),
-    application/epub+zip (now registered), application/merge-patch+json
+  * Updated metadata for application/coap-group\+json (RFC7390),
+    application/epub\+zip (now registered), application/merge-patch\+json
     (RFC7396), application/smil, application/vnd.arastra.swi,
-    application/vnd.geocube+xml, application/vnd.gmx, application/xhtml+xml,
+    application/vnd.geocube\+xml, application/vnd.gmx, application/xhtml\+xml,
     text/directory.
+* Andy Brody (@ab) fixed a pair of embarrassing typos in text/csv and
+  text/tab-separated-values,
+  {#89}[https://github.com/mime-types/ruby-mime-types/pull/89].
+* Aggelos Avgerinos (@eavgerinos) added the unregistered MIME type
+  image/x-ms-bmp with the extension +bmp+,
+  {#90}[https://github.com/mime-types/ruby-mime-types/pull/90].
 
 == 2.4.2 / 2014-10-15
 
 * Added application/vnd.ms-outlook as an unregistered MIME type with the
   extension +msg+. Provided by @keerthisiv in
-  {#72}[https://github.com/halostatue/mime-types/pull/72].
+  {#72}[https://github.com/mime-types/ruby-mime-types/pull/72].
 
 == 2.4.1 / 2014-10-07
 
@@ -87,10 +94,10 @@
 == 2.2 / 2014-03-14
 * Added <tt>.sj</tt> to +application/javascript+ as provided by Brandon
   Galbraith (@brandongalbraith) in
-  {#58}[https://github.com/halostatue/mime-types/pull/58].
+  {#58}[https://github.com/mime-types/ruby-mime-types/pull/58].
 * Marked application/excel and application/x-excel as obsolete in favour of
   application/vnd.ms-excel per
-  {#60}[https://github.com/halostatue/mime-types/pull/60].
+  {#60}[https://github.com/mime-types/ruby-mime-types/pull/60].
 * Merged duplicate MIME types into the registered MIME type. The only
   difference between the MIME types was capitalization; the MIME type registry
   is case-preserving.
