--- a/History.rdoc
+++ b/History.rdoc
@@ -1,15 +1,28 @@
-== NEXT / YYYY-MM-DD
+== 2.5 / 2015-04-25
 
+* Bugs:
+  * David Genord (@albus522) fixed a bug in loading MIME::types cache where a
+    container loaded from cache did not have the expected +default_proc+,
+    {#86}[https://github.com/mime-types/ruby-mime-types/pull/86].
+  * Richard Schneeman (@schneems) provided a patch that substantially reduces
+    unnecessary allocations.
 * Documentation:
-  * Tibor Szolár (@flexik) fixed a typo in the README.
-  * Fixed #80, clarifying the relationship of MIME::Type#content_type and
+  * Tibor Szolár (@flexik) fixed a typo in the README,
+    {#82}[https://github.com/mime-types/ruby-mime-types/pull/82]
+  * Fixed {#80}[https://github.com/mime-types/ruby-mime-types/issues/80],
+    clarifying the relationship of MIME::Type#content_type and
     MIME::Type#simplified, with Ken Ip (@kenips).
+* Development:
+  * Juanito Fatas (@JuanitoFatas) enabled container mode on Travis CI,
+    {#87}[https://github.com/mime-types/ruby-mime-types/pull/87].
+* Moved development to a mime-types organization under
+  {mime-types/ruby-mime-types}[https://github.com/mime-types/ruby-mime-types].
 
 == 2.4.3 / 2014-10-21
 
 * Bugs:
   * Restored Ruby 1.9.2 support by using +private_constant+ conditionally.
-    Fixes {#77}[https://github.com/halostatue/mime-types/issues/77] found by
+    Fixes {#77}[https://github.com/mime-types/ruby-mime-types/issues/77] found by
     Kris Leech (@krisleech). The conditional use of +private_constant+ here
     will be removed for mime-types 3.0, when Ruby 1.9.2 support will be
     unconditionally removed.
@@ -19,10 +32,10 @@
 * Bugs:
   * Aaron Patterson (@tenderlove) found a loading bug and provided a fix that
     nearly doubled registry load performance
-    ({#74}[https://github.com/halostatue/mime-types/pull/74]).
+    ({#74}[https://github.com/mime-types/ruby-mime-types/pull/74]).
   * Godfrey Chan (@chancancode) provided a prophylactic security fix to use
     <tt>JSON.parse</tt> instead of <tt>JSON.load</tt> in
-    {#75}[https://github.com/halostatue/mime-types/pull/75]. This provides a
+    {#75}[https://github.com/mime-types/ruby-mime-types/pull/75]. This provides a
     20% improvement over the already improved result, resulting in a total 55%
     performance boost.
 
@@ -33,7 +46,7 @@ mime-types 2.4 was pulled.
 * Bugs:
   * Restored the extension sort order from mime-types 1.25.1 and modified
     MIME::Type#extensions= to no longer sort extensions when set. This resolves
-    {#71}[https://github.com/halostatue/mime-types/issues/71] and should fix
+    {#71}[https://github.com/mime-types/ruby-mime-types/issues/71] and should fix
     Paperclip.
 * API Changes:
   * Added MIME::Type#preferred_extension to return the preferred extension for
@@ -72,13 +85,13 @@ mime-types 2.4 was pulled.
 == 2.2 / 2014-03-14
 
 * Clarified contribution guidelines for MIME types. Resolves
-  {#57}[https://github.com/halostatue/mime-types/issues/57].
+  {#57}[https://github.com/mime-types/ruby-mime-types/issues/57].
 * Fixed a small bug where deprecated methods would warn of deprecation when
   called by internal methods. Resolves
-  {#60}[https://github.com/halostatue/mime-types/issues/60].
+  {#60}[https://github.com/mime-types/ruby-mime-types/issues/60].
 * Dropped Code Climate; added Coveralls for test coverage reports.
 * Removing external references to RubyForge, as it is shutting down. Resolves
-  {#59}[https://github.com/halostatue/mime-types/issues/59].
+  {#59}[https://github.com/mime-types/ruby-mime-types/issues/59].
 
 == 2.1 / 2014-01-25
 
@@ -112,8 +125,8 @@ mime-types 2.4 was pulled.
   * Construction of a MIME::Type can be with any of the following objects:
     * An array containing a valid content type identifier and an optional array
       of extensions. This allows MIME::Type.new to be used instead of
-      MIME::Type.from_array for the most common use-case. Fixes #43.
-      https://github.com/halostatue/mime-types/pull/43
+      MIME::Type.from_array for the most common use-case. Fixes
+      {#43}[https://github.com/mime-types/ruby-mime-types/pull/43].
     * A Hash containing the output of MIME::Type#to_h, as would be deserialized
       from the JSON representation of a MIME::Type. This replaces
       MIME::Type.from_hash using a different parameter set.
@@ -132,7 +145,7 @@ mime-types 2.4 was pulled.
     MIME::Type#encode_with and MIME::Type#init_with.
   * Implemented JSON hash encoding methods.
   * Added MIME::Type#add_extensions to easily add extensions to a MIME::Type.
-    Fixes #44. https://github.com/halostatue/mime-types/pull/44
+    Fixes {#44}[https://github.com/mime-types/ruby-mime-types/pull/44].
 * API Changes (MIME::Types):
   * MIME type caching has been extracted to its own class. It is structurally
     similar to what was introduced with mime-types 1.25, but is no longer
@@ -144,7 +157,7 @@ mime-types 2.4 was pulled.
   * The MIME::Types#type_for platform parameter has been deprecated.
   * Added the ability for MIME::Types#type_for produce results for multiple
     filenames or extensions by providing an array as the first parameter. Fixes
-    #42. https://github.com/halostatue/mime-types/pull/42
+    {#42}[https://github.com/mime-types/ruby-mime-types/pull/42].
   * MIME::Types#add_type_variant and MIME::Types#index_extensions have been
     deprecated as public methods. They will be private in a future version.
   * MIME::Types#defined_types, MIME::Types.cache_file,
@@ -155,14 +168,15 @@ mime-types 2.4 was pulled.
     MIME::Types::Loader::PATH. +PATH+ is defined in the file
     lib/mime/types/path.rb so that system packagers only have to modify one
     file in order to put the registry in a location that is not where a gem
-    version of mime-types would expect it. This resolves issue #36, reported by
-    postmodern. https://github.com/halostatue/mime-types/pull/36
+    version of mime-types would expect it. This resolves issue
+    {#36}[https://github.com/mime-types/ruby-mime-types/pull/36], reported by
+    @postmodern.
   * The default registry is now a single file in JSON format. This resolves
-    issue #28 reported by jasonlor (an error with mime-types in MacRuby).
-    https://github.com/halostatue/mime-types/pull/28
+    issue {#28}[https://github.com/mime-types/ruby-mime-types/pull/28] reported
+    by @jasonlor (an error with mime-types in MacRuby).
   * The default registry is compiled from YAML files in type-lists/, resolving
-    issue #37 reported by postmodern requesting an easier-to-edit format.
-    https://github.com/halostatue/mime-types/pull/37
+    issue {#37}[https://github.com/mime-types/ruby-mime-types/pull/37]
+    reported by @postmodern requesting an easier-to-edit format.
 * New or Updated MIME Types:
   * Major updates to the registered MIME type list from IANA using the improved
     developer tools.
@@ -216,7 +230,7 @@ mime-types 2.4 was pulled.
 
 * Code Climate:
   * Working on improving the quality of the mime-types codebase through the use
-    of Code Climate. https://codeclimate.com/github/halostatue/mime-types
+    of Code Climate.
   * Simplified MIME::Type.from_array to make more assumptions about assignment.
 * Documentation:
   * LeoYoung <mrleoyoung@gmail.com> pointed out that the README.rdoc contained
@@ -228,10 +242,10 @@ mime-types 2.4 was pulled.
   for most development purposes. This has been removed to ensure that Travis CI
   passes on Ruby 1.8.7.
 * New MIME Types:
-  * 7zip (application/x-7z-compressed). Fixes a request by kodram.
-    https://github.com/halostatue/mime-types/issues/32
-  * application/x-www-form-urlencoded. Fixes a request by alexkwolfe.
-    https://github.com/halostatue/mime-types/issues/39
+  * 7zip (application/x-7z-compressed). Fixes a request by @kodram.
+    {#32}[https://github.com/mime-types/ruby-mime-types/issues/32]
+  * application/x-www-form-urlencoded. Fixes a request by @alexkwolfe.
+    {#39}[https://github.com/mime-types/ruby-mime-types/issues/39]
   * Various new MIME types from IANA:
     * application/mbms-schedule\+xml from 3GPP and Turcotte.
     * application/provenance\+xml from W3C and Herman.
@@ -250,9 +264,10 @@ mime-types 2.4 was pulled.
 == 1.23 / 2013-04-20
 
 * New Feature:
-  * Arnaud Meuret (ameuret) suggested that it could be useful if the MIME type
-    collection was enumerable, so he implemented it in #30. Thanks for the
-    contribution! https://github.com/halostatue/mime-types/pull/30
+  * Arnaud Meuret (@ameuret) suggested that it could be useful if the MIME type
+    collection was enumerable, so he implemented it in
+    {#30}[https://github.com/mime-types/ruby-mime-types/pull/30]. Thanks for
+    the contribution!
 * Updated MIME Types:
   * RFC6910 was adopted (application/call-completion).
   * RFC6902 was adopted (application/json-patch\+json).
@@ -271,7 +286,7 @@ mime-types 2.4 was pulled.
 * New MIME Types:
   * Added support for 3FR (Hasselblad raw images) files. MIME-Type was obtained
     by looking at exif data with exiftool. Thanks to cgat for these changes.
-    https://github.com/halostatue/mime-types/pull/27
+    {#27}[https://github.com/mime-types/ruby-mime-types/pull/27]
 * Updated MIME Types:
     * Pulled the latest updates from the IANA MIME-Type registry.
 * Added support for Ruby 2.0 with Travis CI.
@@ -283,7 +298,8 @@ mime-types 2.4 was pulled.
     application/vnd.ms-fontobject, .eot; application/x-chrome-extension, .crx;
     application/x-web-app-manifest\+json, .webapp; application/x-xpinstall,
     .xpi; image/svg\+xml, .svg, .svgz; image/webp, .webp; text/cache-manifest,
-    .appcache, .manifest. https://github.com/halostatue/mime-types/pull/24
+    .appcache, .manifest.
+    #{24}[https://github.com/mime-types/ruby-mime-types/pull/24]
 * Fixed some Manifest.txt related madness on Travis.
 
 == 1.20.1 / 2013-01-26
@@ -293,18 +309,18 @@ mime-types 2.4 was pulled.
     (application/x-iwork-keynote-sffkey, .key;
     application/x-iwork-pages-sffpages, .pages;
     application/x-iwork-numbers-sffnumbers, .numbers).
-    https://github.com/halostatue/mime-types/issue/20
+    {#20}[https://github.com/mime-types/ruby-mime-types/issue/20]
   * epub, ibooks, mobi, and DMG content types by Mauricio
     Linhares (mac:application/x-apple-diskimage, .dmg; application/epub\+zip,
     .epub; application/x-ibooks\+zip, .ibooks; application/x-mobipocket-ebook,
-    .mobi). https://github.com/halostatue/mime-types/issue/22
+    .mobi). {#22}[https://github.com/mime-types/ruby-mime-types/issue/22]
   * rss content type by Garret Alfert (application/rss\+xml, .rss).
-    https://github.com/halostatue/mime-types/issue/23
+    {#23}[https://github.com/mime-types/ruby-mime-types/issue/23]
   * Added or updated MIME types from the latest IANA list.
 * Fixed MIME Types:
   * Excel macro-enabled spreadsheets had an incorrect extension. Thanks to
     Rafael Belvederese for reporting this issue.
-    https://github.com/halostatue/mime-types/issue/21
+    {#21}[https://github.com/mime-types/ruby-mime-types/issue/21]
 * Enabled for use with travis.
 * Enabled gem signing.
 * Fixed an error related to MIME type downloads.
@@ -312,41 +328,54 @@ mime-types 2.4 was pulled.
 
 == 1.19 / 2012-06-20
 * New MIME Types:
-  * XCF Gnome Images (image/x-xcf, image/x-compressed-xcf; .xcf). https://github.com/halostatue/mime-types/issue/17
-  * Types reported in https://github.com/halostatue/mime-types/issues/12:
+  * XCF Gnome Images (image/x-xcf, image/x-compressed-xcf; .xcf).
+    {#17}[https://github.com/mime-types/ruby-mime-types/issue/17]
+  * Types reported in
+    {#12}[https://github.com/mime-types/ruby-mime-types/issues/12]:
     * DV (video/x-dv; .dv)
     * IVF (video/x-ivf; .ivf)
     * Matroska (video/x-matroska; .mkv)
     * Motion JPEG (video/x-motion-jpeg; .mjpg)
     * RealMedia (official; application/vnd.rn-realmedia; .rm)
 * New extensions:
-  * dcm (application/dicom); https://github.com/halostatue/mime-types/issue/16.
-  * Types reported in https://github.com/halostatue/mime-types/issues/12:
+  * dcm (application/dicom);
+    {#16}[https://github.com/mime-types/ruby-mime-types/issue/16].
+  * Types reported in
+    {#12}[https://github.com/mime-types/ruby-mime-types/issues/12]:
     * 3g2, 3gpp2 (video/3gpp2)
     * mpeg (video/mpeg)
     * mxf (application/mxf)
     * ts (video/MP2T)
     * ogg (video/ogg)
 * Fixed MIME Types:
-  * Adobe AIR application installer packages was missing a hyphen. https://github.com/halostatue/mime-types/issue/13
-  * Types reported in https://github.com/halostatue/mime-types/issues/12:
+  * Adobe AIR application installer packages was missing a hyphen.
+    {#13}[https://github.com/mime-types/ruby-mime-types/issue/13]
+  * Types reported in
+    {#12}[https://github.com/mime-types/ruby-mime-types/issues/12]:
     * audio/x-pn-realaudio extension is .ra, not .rm.
-* Resolved https://github.com/halostatue/mime-types/issues/8. Apparently some people run the tests on Linux. Imagine that.
+* Resolved {#8}[https://github.com/mime-types/ruby-mime-types/issues/8].
+  Apparently some people run the tests on Linux. Imagine that.
 
 == 1.18 / 2012-03-20
 * New MIME Types:
-  * Types reported in https://github.com/halostatue/mime-types/issues/6:
+  * Types reported in
+    #{6}[https://github.com/mime-types/ruby-mime-types/issues/6]:
     * CoffeeScript (text/x-coffeescript; .coffee; 8bit).
     * AIR (application/vnd.adobe.air-applicationinstaller-package\+zip, .air; base64).
     * WOFF (application/font-woff; .woff; base64).
     * TrueType (application/x-font-truetype; .ttf; base64).
     * OpenType (application/x-font-opentype; .otf; base64).
-  * WebM (audio/webm, video/webm; .webm). https://github.com/halostatue/mime-types/issues/11.
+  * WebM (audio/webm, video/webm; .webm).
+    {#11}[https://github.com/mime-types/ruby-mime-types/issues/11.]
 * New extensions:
   * f4v/f4p (video/mp4, used by Adobe); f4a/fb4 (audio/mp4, used by Adobe).
 * Bug Fixes:
-  * It was pointed out that Licence.txt was incorrectly named. Fixed by renaming to Licence.rdoc (from Issue/Pull Request #8, https://github.com/halostatue/mime-types/issues/8).
-  * It was pointed out that a plan to have the test output generated automatically never went through. https://github.com/halostatue/mime-types/issues/10
+  * It was pointed out that Licence.txt was incorrectly named. Fixed by
+    renaming to Licence.rdoc (from Issue/Pull Request
+    {#8}[https://github.com/mime-types/ruby-mime-types/issues/8]).
+  * It was pointed out that a plan to have the test output generated
+    automatically never went through.
+    {#10}[https://github.com/mime-types/ruby-mime-types/issues/10]
 
 == 1.17.2 / 2011-10-25
 * Bug Fixes:
@@ -357,10 +386,13 @@ mime-types 2.4 was pulled.
   * Implemented modern 'hoe' semantics.
   * Switched to minitest instead of test/unit.
   * Converted documentation from .txt to .rdoc.
-  * Removed setup.rb. https://github.com/halostatue/mime-types/issues/3
-  * Should no longer complain about missing RubyGems keys https://github.com/halostatue/mime-types/issues/2
+  * Removed setup.rb.
+    {#3}[https://github.com/mime-types/ruby-mime-types/issues/3]
+  * Should no longer complain about missing RubyGems keys
+    {#2}[https://github.com/mime-types/ruby-mime-types/issues/2]
   * Added .mp4 and .mpg4 as recognized extensions for
-    {application,audio,video}/mp4 per RFC4337. https://github.com/halostatue/mime-types/issues/1
+    (application|audio|video)/mp4 per RFC4337.
+    {#1}[https://github.com/mime-types/ruby-mime-types/issues/1]
   * Added audio/x-aac and .aac per RubyForge issue #28054.
   * Made it much easier to update MIME types from this point forward.
   * Updated MIME types from IANA.
