--- a/Licence.rdoc
+++ b/Licence.rdoc
@@ -2,13 +2,14 @@
 
 This software is available under three licences: the GNU GPL version 2 (or at
 your option, a later version), the Perl Artistic License, or the MIT License.
-Note that my preference for licensing is the MIT License, but the original Perl
-MIME::Types was dually originally licensed with the Perl Artistic Licence and
-the GNU GPL ("the same terms as Perl itself") and given that the Ruby
-implementation hewed pretty closely to the Perl version, I must maintain the
-additional licensing terms.
+The licence preferred by me is the MIT licence.
 
-* Copyright 2003–2014 Austin Ziegler.
+The original Perl MIME::Types was dually originally licensed with the Perl
+Artistic Licence and the GNU GPL ("the same terms as Perl itself") and given
+that the Ruby implementation originally hewed pretty closely to the Perl
+version, I chose to maintain the additional licensing terms.
+
+* Copyright 2003–2015 Austin Ziegler.
 * Adapted from MIME::Types (Perl) by Mark Overmeer.
 
 === MIT License
