--- a/Contributing.rdoc
+++ b/Contributing.rdoc
@@ -82,7 +82,7 @@ generate the RDoc.
 Here's the most direct way to get your work merged into the project:
 
 * Fork the project.
-* Clone down your fork (<tt>git clone git://github.com/<username>/mime-types.git</tt>).
+* Clone down your fork (<tt>git clone git://github.com/<username>/ruby-mime-types.git</tt>).
 * Create a topic branch to contain your change (<tt>git checkout -b my\_awesome\_feature</tt>).
 * Hack away, add tests. Not necessarily in that order.
 * Make sure everything still passes by running +rake+.
