Correct anchor for rdoc [ci skip]

--- a/README.rdoc
+++ b/README.rdoc
@@ -30,7 +30,7 @@ is a new default registry storage format that greatly reduces the initial
 memory use of the mime-types library. This feature is enabled by requiring
 +mime/types/columnar+ instead of +mime/types+ with a small performance cost and
 no change in *total* memory use if certain methods are called (see {Columnar
-Store}[https://github.com/mime-types/ruby-mime-types#columnar-store] for more details).
+Store}[#label-Columnar+Store] for more details).
 The second new feature is a logger interface that conforms to the expectations of
 an ActiveSupport::Logger so that warnings can be written to an application's log
 rather than the default location for +warn+. This interface may be used for other
