--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= mime-types
+= mime-types for Ruby
 
 home :: https://github.com/mime-types/ruby-mime-types/
 code :: https://github.com/mime-types/ruby-mime-types/
@@ -14,6 +14,16 @@ MIME content type definitions. It can be used to determine defined filename
 extensions for MIME types, or to use filename extensions to look up the likely
 MIME type definitions.
 
+Version 3.0 is a major release that requires Ruby 2.0 compatibility and removes
+deprecated functions. The columnar registry format introduced in 2.6 has been
+made the primary format; the registry data has been extracted from this library
+and put into {mime-types-data}[https://github.com/mime-types/mime-types-data].
+Additionally, mime-types is now licensed exclusively under the MIT licence and
+there is a code of conduct in effect. There are a number of other smaller
+changes described in the History file.
+
+=== About MIME Media Types
+
 MIME content types are used in MIME-compliant communications, as in e-mail or
 HTTP traffic, to indicate the type of content which is transmitted. The
 mime-types library provides the ability for detailed information about MIME
@@ -25,51 +35,20 @@ recommendations, the {IANA Media Types
 registry}[https://www.iana.org/assignments/media-types/media-types.xhtml], and
 user contributions. It conforms to RFCs 2045 and 2231.
 
-This is release 2.6 with two new experimental features. The first new feature
-is a new default registry storage format that greatly reduces the initial
-memory use of the mime-types library. This feature is enabled by requiring
-+mime/types/columnar+ instead of +mime/types+ with a small performance cost and
-no change in *total* memory use if certain methods are called (see {Columnar
-Store}[#label-Columnar+Store]). The second new feature is a logger interface
-that conforms to the expectations of an ActiveSupport::Logger so that warnings
-can be written to an application's log rather than the default location for
-+warn+. This interface may be used for other logging purposes in the future.
-
-mime-types 2.6 is the last planned version of mime-types 2.x, so deprecation
-warnings are no longer cached but provided every time the method is called.
-mime-types 2.6 supports Ruby 1.9.2 or later.
-
 === mime-types 1.x End of Life
 
-mime-types 2.0 was released in late 2013, and as of early 2015 there have been
-no reported security issues for mime-types 1.x. With the release of mime-types
-2.5, I set the formal End of Life for mime-types 1.x for 2015-10-27 (the second
-anniversary of the release of mime-types 2.0). After this date, absolutely no
-pull requests for mime-types 1.x will be accepted.
+mime-types 1.x is no longer supported as of 2015-10-27.
 
-=== mime-types Future
+=== mime-types 2.x End of Life
 
-There are a number of issues open that make clear to me that there are some
-fundamental changes that need to happen to both the data representation and the
-API provided by mime-types. This cannot happen under the current release, so
-all new development is focussing on an upcoming 3.0 release. The target for the
-release is on or before the beginning of RubyConf 2015 (2015-11-15).
+mime-types 2.x is supported as 2.99.x receiving quarterly updates of the IANA
+registry and security updates for two years. It will reach full end of life on
+2017-11-21.
 
-When 3.0 is released, mime-types 2.x will receive regular updates of the IANA
-registry for two years following the release. It will also receive security
-updates, if needed, for the same period. There will be no further feature
-development on mime-types 2.x following the 3.0 release.
+=== mime-types 3.x
 
-Coincident with the 3.0 release, I will release mime-types 2.99.0 that no
-longer imports the data to fields that have been deprecated, or exports it if
-it is present. If they work because they derive data from the data that is
-still present, the will continue to work. The quarterly updates will be against
-2.99.x.
-
-If the possible loss of this deprecated data matters, be sure to set your
-dependency appropriately:
-
-   gem 'mime-types', '~> 2.6, < 2.99'
+Users are encouraged to upgrade to mime-types 3.x as soon as is practical.
+mime-types 3.x requires Ruby 2.0 compatibility and a simpler licensing scheme.
 
 == Synopsis
 
@@ -111,9 +90,9 @@ files). A MIME::Type stores the known information about one MIME type.
    puts text.like?(MIME::Type.new('x-text/x-plain')) # => true
 
    puts text.xrefs.inspect # => { "rfc" => [ "rfc2046", "rfc3676", "rfc5147" ] }
-   puts text.urls # => [ "http://www.iana.org/go/rfc2046",
-                  #      "http://www.iana.org/go/rfc3676",
-                  #      "http://www.iana.org/go/rfc5147" ]
+   puts text.xref_urls # => [ "http://www.iana.org/go/rfc2046",
+                       #      "http://www.iana.org/go/rfc3676",
+                       #      "http://www.iana.org/go/rfc5147" ]
 
    xtext = MIME::Type.new('x-text/x-plain')
    puts xtext.media_type # => 'text'
@@ -136,50 +115,57 @@ files). A MIME::Type stores the known information about one MIME type.
 
 === Columnar Store
 
-mime-types 2.6 has an experimental columnar storage format that reduces the
-default memory footprint. It does this by selectively loading data. When a
-registry is first loaded from a columnar store, only the canonical MIME type
-and registered extensions will be loaded and the MIME type will be connected to
-its registry. When extended data is required (including #registered, #obsolete,
-#use_instead), that data is loaded from its own column file for all types in
-the registry. This load is done with a Mutex to ensure that the types are
-updated safely in a multithreaded environment.
+mime-types uses as its primary registry storage format a columnar storage
+format reducing the default memory footprint. This is done by selectively
+loading the data on a per-attribute basis. When the registry is first loaded
+from the columnar store, only the canonical MIME content type and known
+extensions and the MIME type will be connected to its loading registry. When
+other data about the type is required (including +preferred_extension+,
+<tt>obsolete?</tt>, and <tt>registered?</tt>) that data is loaded from its own
+column file for all types in the registry.
 
-Columnar storage is slated to become the default storage format for mime-types
-3.0, but until that is released, the default is still to use the JSON storage
-format. As such, columnar storage can only currently be loaded at an
-application level with the following specification in the application Gemfile:
+The load of any column data is performed with a Mutex to ensure that types are
+updated safely in a multithreaded environment. Benchmarks show that while
+columnar data loading is slower than the JSON store, it cuts the memory use by
+a third over the JSON store.
 
-   gem 'mime-types', require: 'mime/types/columnar'
+If you prefer to load all the data at once, this can be specified in your
+application Gemfile as:
 
-Projects that do not use Bundler, and libraries that wish to suggest this
-behaviour to applications are encouraged to require this directly, but only if
-you specify a dependency on mime-types 2.6.
+   gem 'mime-types', require: 'mime/types/full'
+
+Projects that do not use Bundler should +require+ the same:
+
+   require 'mime/types/full'
+
+Libraries that use mime-types are discouraged from choosing the JSON store.
+
+For applications and clients that used mime-types 2.6 when the columnar store
+was introduced, the require used previously will still work through at least
+{version
+4}[https://github.com/mime-types/ruby-mime-types/pull/96#issuecomment-100725400]
+and possibly beyond; it is effectively an empty operation. You are recommended
+to change your Gemfile as soon as is practical.
 
    require 'mime/types/columnar'
 
-Although this require will not be necessary after mime-types 3, it will work
-through at least {version
-4}[https://github.com/mime-types/ruby-mime-types/pull/96#issuecomment-100725400]
-and possibly beyond.
-
-Note that the new Columnar class (MIME::Type::Columnar) and module
-(MIME::Types::Columnar) are considered private variant implementations of
-MIME::Type and MIME::Types and the specific implementation should not be relied
-upon by consumers of the mime-types library. Instead, depend on the public
-implementations only.
+Note that MIME::Type::Columnar and MIME::Types::Columnar are considered private
+variant implementations of MIME::Type and MIME::Types and the specific
+implementation should not be relied upon by consumers of the mime-types
+library. Instead, depend on the public implementations (MIME::Type and
+MIME::Types) only.
 
 === Cached Storage
 
-Since version 2.0, mime-types has supported a cache of MIME types based on
-<tt>Marshal.dump</tt>. The cache is invalidated for each released version of
-mime-types so that version 2.5 is not reused for version 2.6. If the
+mime-types supports a cache of MIME types using <tt>Marshal.dump</tt>. The
+cache is invalidated for each version of the mime-types-data gem so that data
+version 3.2015.1201 will not be reused with data version 3.2016.0101. If the
 environment variable +RUBY_MIME_TYPES_CACHE+ is set to a cache file, mime-types
 will attempt to load the MIME type registry from the cache file. If it cannot,
 it will load the types normally and then saves the registry to the cache file.
 
-The current mime-types cache is not compatible with the columnar storage
-format. This will be resolved for mime-types 3.
+The caching works with both full stores and columnar stores. Only the data that
+has been loaded prior to saving the cache will be stored.
 
 == mime-types Modified Semantic Versioning
 
