--- a/History.rdoc
+++ b/History.rdoc
@@ -1,10 +1,78 @@
-== NEXT / YYYY-MM-DD
+== 3.0 / 2015-11-21
 
-* 1 governance change
+* 2 governance changes
 
-  * This project now has a {Code of Conduct}[Code-of-Conduct_rdoc.html]
+  * This project and the related mime-types-data project are now exclusively
+    MIT licensed. Resolves
+    {#95}[https://github.com/mime-types/ruby-mime-types/issues/95].
 
+  * All projects under the mime-types organization now have a standard code of
+    conduct adapted from the {Contributor
+    Covenant}[http://contributor-covenant.org]. This text can be found in the
+    {Code-of-Conduct.rdoc}[Code-of-Conduct_rdoc.html] file.
 
+* 3 major changes
+
+  * All methods deprecated in mime-types 2.x have been removed.
+  * mime-types now requires Ruby 2.0 compatibility or later. Resolves
+    {#97}[https://github.com/mime-types/ruby-mime-types/issues/97].
+  * The registry data has been removed from mime-types and put into
+    mime-types-data, maintained and released separately. It can be found at
+    {mime-types-data}[https://github.com/mime-types/mime-types-data].
+
+* 17 minor changes:
+
+  * MIME::Type changes:
+
+    * Changed the way that simplified types representations are creatd to
+      reflect the fact that +x-+ prefixes are no longer considered special
+      according to IANA. A simplified MIME type is case-folded to lowercase. A
+      new keyword parameter, +remove_x_prefix+, can be provided to remove +x-+
+      prefixes.
+    * Improved initialization with an Array works so that extensions do not
+      need to be wrapped in another array. This means that <tt>%w(text/yaml
+      yaml yml)</tt> works in the same way that <tt>['text/yaml', %w(yaml
+      yml)]</tt> did (and still does).
+    * Changed +priority_compare+ to conform with attributes that no longer
+      exist.
+    * Changed the internal implementation of extensions to use a frozen Set.
+    * When extensions are set or modified with +add_extensions+, the primary
+      registry will be informed of a need to reindex extensions. Resolves
+      {#84}[https://github.com/mime-types/ruby-mime-types/issues/84].
+    * The preferred extension can be set explicitly. If not set, it will be the
+      first extension. If the preferred extension is not in the extension list,
+      it will be added.
+    * Improved how xref URLs are generated.
+    * Converted +obsolete+, +registered+ and +signature+ to attr_accessors.
+
+  * MIME::Types changes:
+
+    * Modified MIME::Types.new to track instances of MIME::Types so that they
+      can be told to reindex the extensions as necessary.
+    * Removed +data_version+ attribute.
+    * Changed #[] so that the +complete+ and +registered+ flags are keywords
+      instead of a generic options parameter.
+    * Extracted the class methods to a separate file.
+    * Changed the container implementation to use a Set instead of an Array to
+      prevent data duplication. Resolves
+      {#79}[https://github.com/mime-types/ruby-mime-types/issues/79].
+
+  * MIME::Types::Cache changes:
+
+    * Caching is now based on the data gem version instead of the mime-types
+      version.
+    * Caching is compatible with columnar registry stores.
+
+  * MIME::Types::Loader changes:
+
+    * MIME::Types::Loader::PATH has been removed and replaced with
+      MIME::Types::Data::PATH from the mime-types-data gem. The environment
+      variable RUBY_MIME_TYPES_DATA is still used.
+    * Support for the long-deprecated mime-types v1 format has been removed.
+    * The registry is default loaded from the columnar store by default. The
+      internal format of the columnar store has changed; many of the boolean
+      flags are now loaded from a single file. Resolves
+      {#85}[https://github.com/mime-types/ruby-mime-types/85].
 
 == 2.6.2 / 2015-09-13
 
